# SilverStarSCS.Docs-zh-cn

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  noxfile.py  pyproject.toml  requirements.txt  ruff.toml
.github/: dependabot.yml
.github/workflows/: lint.yml
docs/: conf.py  index.rst
docs/function/: assemble.rst  bartack.rst  bobbin_monitor.rst  clamp.rst  control_other.rst  daily_piece_counter.rst  elec_hand_wheel.rst  hand_wheel.rst  index.rst  input_configuration.rst  motor.rst  multitest.rst  needle_cooling.rst  output_configuration.rst  puller.rst  reverse.rst  safety-sensor.rst  seam.rst  seam_center_guide.rst  second_stitch_length.rst  service_counter.rst  sewing_foot_lift.rst  soft_start.rst  stroke.rst  tension.rst  thread_cutter.rst  turn_back.rst  wiper.rst
docs/guide/: get_started.rst
docs/kitchen-sink/: devguide.rst  syntax_ref.rst
docs/latex_templates/: preamble.tex  titlepage.tex
docs/product/: 9051.rst  9091.rst  90a0.rst  controller.rst  hmi.rst
docs/troubleshooting/: index.rst  troubleshooting.rst
source/: E110分析.md  changelog.md  conf.py  contribute.rst  glossary.rst  index.rst  overview.rst
source/function/: assemble.rst  backtack.rst  bartack.rst  bobbin_monitor.rst  clamp.rst  control_other.rst  daily_piece_counter.rst  elec_hand_wheel.rst  index.rst  input_configuration.rst  motor.rst  multitest.rst  needle_cooling.rst  output_configuration.rst  puller.rst  safety-sensor.rst  safety_sensor.rst  seam.rst  seam_center_guide.rst  second_stitch_length.rst  service_counter.rst  soft_start.rst  (+7 more)
(+24 files in other folders)
