[project]
name = "SilverStarSCS.Docs-zh-cn"
version = "0.1.0"
description = "SilverStar SCS Documentation"
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "nox",
    "esbonio>=0.16.5",
]
docs = [
    "furo==2024.8.6",
    "sphinx==7.2.6",
    "sphinx-copybutton==0.5.2",
    "sphinx-inline-tabs==2023.4.21",
    "sphinx-toolbox==3.5.0", 
    "sphinxext-opengraph>=0.9.1", 
]
