[project]
name = "SilverStarSCS.Docs"
version = "0.1.0"
description = "SilverStar SCS Documentation"
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "docstrfmt",
    "doc8"
]
docs = [
    "furo",
    "sphinx-copybutton",
    "sphinx-inline-tabs",
    "sphinx-tabs",
    "sphinx-design", 
]
